--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
 
 	<string name="mainFramesCountFinished">Saved.</string>
 	<string name="mainFramesCount">%1$d frame/%2$ds; %3$dMB, left %4$dMB</string>
-	<string name="mainMediaInfo">%1$dx%2$d@%3$d q%4$d; int %5$dms</string>
+	<string name="mainMediaInfo">%1$dx%2$d@%3$dfps; %4$dms</string>
 	<string name="mainFramesCountReady">Ready</string>
 
 	<string name="exitDialogTitle">Confirm</string>
