Add flash setting

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,5 +41,6 @@
 	<string name="warnPlayingContent">Not all players in Android can play video in MJPEG codec, which write videos by
 		this application. Try VLC or open video on PC.
 	</string>
+	<string name="settingImageFlash">Flash mode</string>
 
 </resources>
