--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,5 +42,6 @@
 		this application. Try VLC or open video on PC.
 	</string>
 	<string name="settingImageFlash">Flash mode</string>
+	<string name="mainBatteryLevel">Battery: %d%%</string>
 
 </resources>
