Remote control: alpha; unstable

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,6 +51,7 @@
 	<string name="warnPlayingTitle">Warning!</string>
 	<string name="warnPlayingOK">Understand</string>
 	<string name="warnPlayingContent">Not all players in Android can play video in MJPEG codec, which write videos by this application. Try VLC or open video on PC.</string>
+	<string name="settingVideoRemoteControl">Enable remote control</string>
 
 
 </resources>
